--- a/models/catboost/catboost.ipynb
+++ b/models/catboost/catboost.ipynb
@@ -128,12 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "6808 1796 8604 8632 True True\n"
+      "p                     6808\n",
+      "r                     1796\n",
+      "p+r                   8604\n",
+      "всего данных          8632\n",
+      "где то потерялось      -28\n",
+      "dtype: int64\n"
      ],
      "output_type": "stream"
     }
@@ -144,11 +149,13 @@
     "\n",
     "p = data['stat_delivery_is_paid']\n",
     "r = data['stat_delivery_is_return']\n",
-    "print(paid, returned, paid+returned, data.shape[0], np.all(returned), np.all(paid))\n",
     "\n",
-    "for i in range(len(p)):\n",
-    "    if r[i] == p[i]:\n",
-    "        print( i)\n"
+    "series = pd.Series(data=[paid, returned, paid+returned, \n",
+    "                         data.shape[0], paid+returned - data.shape[0]]) \n",
+    "series.index = [\"p\", \"r\", \"p+r\", \"всего данных\", \"где то потерялось \"]\n",
+    "\n",
+    "print(series)\n",
+    "#print(paid, returned, paid+returned, data.shape[0], np.all(returned), np.all(paid))\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -193,6 +200,32 @@
     "    if data[col].count() == 28:\n",
     "        print(col)\n",
     "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "a = False , b = True\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "a = np.array([1, 2, 0, 4])\n",
+    "b = np.array([1, 2, 4])\n",
+    "\n",
+    "print(f\"a = {np.all(a)} , b = {np.all(b) }\")"
    ],
    "metadata": {
     "collapsed": false,
