--- a/models/catboost/catboost.ipynb
+++ b/models/catboost/catboost.ipynb
@@ -13,6 +13,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from IPython.core.display import display\n",
     "\n",
     "from catboost_data_engine import AdultDataEngine"
    ]
@@ -128,34 +129,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "p                     6808\n",
-      "r                     1796\n",
-      "p+r                   8604\n",
-      "всего данных          8632\n",
-      "где то потерялось      -28\n",
+      "p                    6808\n",
+      "r                    1796\n",
+      "p+r                  8604\n",
+      "всего данных         8632\n",
+      "где-то потерялось     -28\n",
       "dtype: int64\n"
      ],
      "output_type": "stream"
     }
    ],
    "source": [
-    "paid = data['stat_delivery_is_paid'].count()\n",
-    "returned = data['stat_delivery_is_return'].count()\n",
+    "p = data['stat_delivery_is_paid'].count()\n",
+    "r = data['stat_delivery_is_return'].count()\n",
     "\n",
-    "p = data['stat_delivery_is_paid']\n",
-    "r = data['stat_delivery_is_return']\n",
+    "series = pd.Series(data={\"p\": p, \"r\": r, \"p+r\": p+r, \n",
+    "                          \"всего данных\": data.shape[0], \"где-то потерялось\": p+r-data.shape[0]}    ) \n",
     "\n",
-    "series = pd.Series(data=[paid, returned, paid+returned, \n",
-    "                         data.shape[0], paid+returned - data.shape[0]]) \n",
-    "series.index = [\"p\", \"r\", \"p+r\", \"всего данных\", \"где то потерялось \"]\n",
-    "\n",
-    "print(series)\n",
-    "#print(paid, returned, paid+returned, data.shape[0], np.all(returned), np.all(paid))\n"
+    "print(series)"
    ],
    "metadata": {
     "collapsed": false,
@@ -211,21 +207,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
+   "outputs": [],
+   "source": [
+    "    import ipywidgets as widgets\n",
+    "\n",
+    "    button = widgets.ToggleButton(\n",
+    "        value=False,\n",
+    "        description='Click me',\n",
+    "        disabled=False,\n",
+    "        button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "        tooltip='Description',\n",
+    "        icon='check'\n",
+    "        )\n",
+    "\n",
+    "    def handler():\n",
+    "        button.value = not button.value\n",
+    "        \n",
+    "        if button.value:\n",
+    "            print(\"True\")\n",
+    "        else:\n",
+    "            print(\"False\")    \n",
+    "            \n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "text": [
-      "a = False , b = True\n"
+      "/home/sergey/anaconda3/envs/WVproject/lib/python3.7/site-packages/ipykernel_launcher.py:1: DeprecationWarning: on_trait_change is deprecated in traitlets 4.1: use observe instead\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
      ],
      "output_type": "stream"
     }
    ],
    "source": [
-    "a = np.array([1, 2, 0, 4])\n",
-    "b = np.array([1, 2, 4])\n",
+    "button.on_trait_change(handler=handler)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 40
+    }
+   ],
+   "source": [
+    "a = not a\n",
+    "a"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "ToggleButton(value=False, description='click me next')",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "90a54daecab94de79b9af101279a9762"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipywidgets as w\n",
+    "toggle = w.ToggleButton(description='click me next')\n",
     "\n",
-    "print(f\"a = {np.all(a)} , b = {np.all(b) }\")"
+    "out = w.Output(layout=w.Layout(border = '1px solid black'))\n",
+    "\n",
+    "def fun(obj):\n",
+    "    with out:\n",
+    "        if obj['new']:  \n",
+    "            display('asd')\n",
+    "        else:\n",
+    "            out.clear_output()\n",
+    "\n",
+    "toggle.observe(fun, 'value')\n",
+    "display(toggle)\n",
+    "display(out)\n"
    ],
    "metadata": {
     "collapsed": false,
