--- a/models/test.ipynb
+++ b/models/test.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Hello test\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
-    "\n"
+    "print(\"Hello test\")\n"
    ]
   }
  ],
@@ -32,6 +40,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
